# issue-cmake-presets

./: README.md  profile_win  run.sh
app/: CMakeLists.txt  conanfile.py  main.cpp
lib/: CMakeLists.txt  conanfile.py  hello.cpp  hello.h
